  (Olivier Nicole, review by Sébastien Hinderer and Xavier Leroy)

- #11844: Reduce verbosity of `make` logs by printing program invocations in
  shorthand (eg `OCAMLC foo.cmo`). Setting `V=1` recovers the old style (with
  full command-lines).
  (Xavier Leroy, Nicolás Ojeda Bär, review by Sébastien Hinderer)

### Bug fixes:

- #10664, #11600: Unsoundness in the typing of polymorphic methods
  involving polymorphic variants
  (Jacques Garrigue, report by Mike Shulman, review by Gabriel Scherer)

- #11302, #11412: `ocamlc` and `ocamlopt` should not remove generated files
  when they are not regular files.
  (Xavier Leroy, report by Thierry Martinez, review by
   Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

- #10348, #10560, #11561: Expand GADT equations lazily during unification to
  avoid ambiguity
  (Jacques Garrigue, review by Leo White)

- #11436: Fix wrong stack backtrace for out-of-bound exceptions raised
  by leaf functions.
  (Tom Kelly and Xavier Leroy, review by Mark Shinwell)

- #11643: Add missing test declaration to float_compare test, so that it will
  run.
  (Stefan Muenzel, review by David Allsopp)

- #11630: Use correct location when reporting record labels with non-existent
  paths.
  (Nicolás Ojeda Bär, report by Jason Gross, review by Gabriel Scherer)

- #11727: Ensure push_defaults can push past module patterns, fixing an
  currying optimisation accidentally disabled by #10340.
  (Stephen Dolan, review by Gabriel Scherer)

- #11732: Ensure that types from packed modules are always generalised
  (Stephen Dolan and Leo White, review by Jacques Garrigue)

- #11771: Use a more relaxed mode for unification in Ctype.subst
  (Leo White, review by Jacques Garrigue and Gabriel Scherer)

- #11776: Extend environment with functor parameters in `strengthen_lazy`.
  (Chris Casinghino and Luke Maurer, review by Gabriel Scherer)

- #11803, #11808: on x86, the destination of an integer comparison must be
  a register, it cannot be a stack slot.